Styling header on home view

--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -1,2 +1,7 @@
+/* COLORS */
 $blue: #00aeef;
 $light-gray: #F0F0F0;
+
+/* FONTS */
+$heading-font: 'Bungee', cursive;
+$body-font: 'Lato', sans-serif;
