Adding style to more page

--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -3,7 +3,11 @@ $blue: #00aeef;
 $light-gray: #F0F0F0;
 $dark-gray: #DEDFE0;
 $orange: #FF9900;
+$red: #FF0000;
 
 /* FONTS */
 $heading-font: 'Bungee', cursive;
 $body-font: 'Lato', sans-serif;
+
+/* LAYOUT */
+$barsHeight: 80px;
