Changing fallback font type for Bungee

--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -6,7 +6,7 @@ $orange: #FF9900;
 $red: #FF0000;
 
 /* FONTS */
-$heading-font: 'Bungee', cursive;
+$heading-font: 'Bungee', sans-serif;
 $body-font: 'Lato', sans-serif;
 
 /* LAYOUT */
